; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/dev/fbt/extr_fbt.c_ctf_decl_fini.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/dev/fbt/extr_fbt.c_ctf_decl_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@CTF_PREC_BASE = common dso_local global i32 0, align 4
@CTF_PREC_MAX = common dso_local global i32 0, align 4
@M_FBT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ctf_decl_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ctf_decl_fini(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %6 = load i32, i32* @CTF_PREC_BASE, align 4
  store i32 %6, i32* %5, align 4
  br label %7

7:                                                ; preds = %31, %1
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @CTF_PREC_MAX, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %34

11:                                               ; preds = %7
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = call i32* @ctf_list_next(i32* %17)
  store i32* %18, i32** %3, align 8
  br label %19

19:                                               ; preds = %28, %11
  %20 = load i32*, i32** %3, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %30

22:                                               ; preds = %19
  %23 = load i32*, i32** %3, align 8
  %24 = call i32* @ctf_list_next(i32* %23)
  store i32* %24, i32** %4, align 8
  %25 = load i32*, i32** %3, align 8
  %26 = load i32, i32* @M_FBT, align 4
  %27 = call i32 @free(i32* %25, i32 %26)
  br label %28

28:                                               ; preds = %22
  %29 = load i32*, i32** %4, align 8
  store i32* %29, i32** %3, align 8
  br label %19

30:                                               ; preds = %19
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %5, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %5, align 4
  br label %7

34:                                               ; preds = %7
  ret void
}

declare dso_local i32* @ctf_list_next(i32*) #1

declare dso_local i32 @free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
